--- a/Work_fujita/index.html
+++ b/Work_fujita/index.html
@@ -36,24 +36,25 @@
 
     <header>
         <h1>タイトル</h1>
-        <ul>
-            <li>
-                <li class="menu1">
-                    サービス 
-            </li>
-                <li class="menu2">
-                    講師一覧
-            </li>
-                <li class="menu3">
-                    料金プラン
-            </li>
-                <li class="menu4">
-                    会社概要
-            </li>
-                <li class="menu5">
-                    お問い合わせ
-            </li>
-        </ul>    
+        <nav>
+            <ul>
+                <li>
+                   <a href="">サービス</a> 
+                </li>
+                <li>
+                   <a href="">講師一覧</a>
+                </li>
+                <li>
+                   <a href="">料金プラン</a>
+                </li>
+                <li>
+                   <a href="">会社概要</a>
+                </li>
+                <li>
+                   <a href="">お問い合わせ</a>
+                </li>
+            </ul>   
+        </nav> 
     </header>
 </body>
 </html>
